Updated routes for dashboard

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -7,7 +7,7 @@
     <p>
       <span for="img" aria-label="money">💲</span>
       <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{bloh_content}}</span>
+      <span class="dollar-amount">{{blog_content}}</span>
       needed!
     </p>
     <p>Created by {{user_id}} on {{date_created}}</p>
