--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,13 +3,11 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <a href="/blog/{{id}}">Placeholder blog link</a>
+      <a href="/blog/{{id}}">Blog Number {{id}}</a>
     </h2>
     <p>
-      <span for="img" aria-label="money">💲</span>
       <!-- Pass needed_funding value to the helper function -->
       <span class="dollar-amount">{{blog_content}}</span>
-      needed!
     </p>
     <p>Created by {{user_id}} on {{date_created}}</p>
   </div>
