--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,12 @@
       <h1>
         <a href="/">John's Tech Blog</a>
       </h1>
+      <h1>
+        <a href="/dashboard">Dashboard</a>
+      </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
