--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,16 +1,16 @@
-{{#each blog }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <a href="/project/{{id}}">{{blog_title}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{blog_content}}</span>
-      needed!
-    </p>
-    <p>Created by {{user_id}} on {{date_created}}</p>
-  </div>
-</div>
-{{/each}}
+    <div class="row mb-2">
+      <div class="col-md-8">
+        <h4><a href="/blog/{{id}}">{{blog_title}}</a></h4>
+      </div>
+      <div class="col-md-8">
+        <h4><a href="/blog/{{id}}">{{blog_content}}</a></h4>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" data-id="{{id}}">DELETE</button>
+      </div>
+      
+      <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" data-id="{{id}}">Add Comment</button>
+      </div>
+    </div>
+
