--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>John's Tech Blog
+  </title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -15,15 +16,15 @@
       <h1>
         <a href="/">John's Tech Blog</a>
       </h1>
-      <h1>
-        <a href="/dashboard">Dashboard</a>
-      </h1>
       <nav>
+        <a href="/"class="no-button" id="logout">Home </a>
+        <a href="/dashboard" class="no-button" >Dashboard </a>
+       
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout">Logout </button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login </a>
         {{/if}}
       </nav>
     </header>
